--- a/auto-docs/executables/js/line_shapes.html
+++ b/auto-docs/executables/js/line_shapes.html
@@ -2,7 +2,7 @@ var trace1 = {
   x: [1, 2, 3, 4, 5], 
   y: [1, 3, 2, 3, 1], 
   mode: "lines+markers", 
-  name: "linear", 
+  name: "'linear'", 
   line: {shape: "linear"}, 
   type: "scatter"
 };
@@ -10,8 +10,8 @@ var trace2 = {
   x: [1, 2, 3, 4, 5], 
   y: [6, 8, 7, 8, 6], 
   mode: "lines+markers", 
-  name: "spline", 
-  text: ["tweak line smoothness<br>with 'smoothing in line object'", "tweak line smoothness<br>with 'smoothing in line object'", "tweak line smoothness<br>with 'smoothing in line object'", "tweak line smoothness<br>with 'smoothing in line object'", "tweak line smoothness<br>with 'smoothing in line object'", "tweak line smoothness<br>with 'smoothing in line object'"], 
+  name: "'spline'", 
+  text: ["tweak line smoothness<br>with 'smoothing' in line object", "tweak line smoothness<br>with 'smoothing' in line object", "tweak line smoothness<br>with 'smoothing' in line object", "tweak line smoothness<br>with 'smoothing' in line object", "tweak line smoothness<br>with 'smoothing' in line object", "tweak line smoothness<br>with 'smoothing' in line object"], 
   line: {shape: "spline"}, 
   type: "scatter"
 };
@@ -19,7 +19,7 @@ var trace3 = {
   x: [1, 2, 3, 4, 5], 
   y: [11, 13, 12, 13, 11], 
   mode: "lines+markers", 
-  name: "vhv", 
+  name: "'vhv'", 
   line: {shape: "vhv"}, 
   type: "scatter"
 };
@@ -27,7 +27,7 @@ var trace4 = {
   x: [1, 2, 3, 4, 5], 
   y: [16, 18, 17, 18, 16], 
   mode: "lines+markers", 
-  name: "hvh", 
+  name: "'hvh'", 
   line: {shape: "hvh"}, 
   type: "scatter"
 };
@@ -35,7 +35,7 @@ var trace5 = {
   x: [1, 2, 3, 4, 5], 
   y: [21, 23, 22, 23, 21], 
   mode: "lines+markers", 
-  name: "vh", 
+  name: "'vh'", 
   line: {shape: "vh"}, 
   type: "scatter"
 };
@@ -43,7 +43,7 @@ var trace6 = {
   x: [1, 2, 3, 4, 5], 
   y: [26, 28, 27, 28, 26], 
   mode: "lines+markers", 
-  name: "hv", 
+  name: "'hv'", 
   line: {shape: "hv"}, 
   type: "scatter"
 };
@@ -51,6 +51,7 @@ var data = [trace1, trace2, trace3, trace4, trace5, trace6];
 var layout = {legend: {
     y: 0.5, 
     traceorder: "reversed", 
+    font: {size: 16}, 
     yref: "paper"
   }};
 
