process new examples

--- a/auto-docs/executables/js/basic_box_plot.html
+++ b/auto-docs/executables/js/basic_box_plot.html
@@ -1,5 +1,8 @@
-y0 = Math.random() * 50
-y1 = Math.random() * 50 + 1
+for (var i = 0; i < 50; i ++) {
+	y0[i] = Math.random();
+	y1[i] = Math.random() + 1;
+}
+
 var trace1 = {
   y: y0, 
   type: "box"
