--- a/auto-docs/executables/js/2d_histogram.html
+++ b/auto-docs/executables/js/2d_histogram.html
@@ -1,5 +1,11 @@
-var x = Math.random() * 50
-var y = Math.random() * 50 + 1
+var x = [];
+var y = [];
+
+for (var i = 0; i < 500; i ++) {
+	x[i] = Math.random();
+	y[i] = Math.random() + 1;
+}
+
 var data = [
   {
     x: x, 
