--- a/auto-docs/executables/js/basic_histogram.html
+++ b/auto-docs/executables/js/basic_histogram.html
@@ -1,4 +1,9 @@
-var x = Math.random() * 500
+var x = [];
+
+for (var i = 0; i < 500; i ++) {
+	x[i] = Math.random();
+}
+
 var data = [
   {
     x: x, 
