--- a/auto-docs/executables/js/horizontal_histogram.html
+++ b/auto-docs/executables/js/horizontal_histogram.html
@@ -1,4 +1,9 @@
-var y = Math.random() * 50
+var y = [];
+
+for (var i = 0; i < 500; i ++) {
+	y[i] = Math.random();
+}
+
 var data = [
   {
     y: y, 
