Styling the landing pages

--- a/_posts/2015-04-05-python-index.html
+++ b/_posts/2015-04-05-python-index.html
@@ -1,29 +1,25 @@
 ---
 permalink: /python
-meta_description: "Omggg!"
-layout: base
+meta_description: "Plotly&#39;s Python graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts"
+layout: langindex
+language: python
 ---
 
-{% assign examples = site.posts | where:"page_type":"example_index" | where:"language","python"  | where:"has_thumbnail",true %}
-{% for page in examples %}
-    {% assign loopindex = forloop.index | modulo: 4 %}
-        {% if loopindex == 1 %}
-        <div class="row">
-        {% endif %}
-            <div class="col s12 m4 l3">
-                <div class="card">
-                    <a href="/{{page.permalink}}">
-                        <div class="card-content">
-                            <span class="card-title blue-grey-text">{{page.name}}</span>
-                            <img class="thumbnail" src="{{page.thumbnail}}" >
-                        </div>
-                    </a>
-                </div>
-            </div>
-        {% if loopindex == 0 %}
-        </div>
-        {% endif %}
-{% endfor %}
-        {% if loopindex != 0 %}
-        </div>
-        {% endif %}
+<h1 class="centered">Plotly Python Library</h1>
+	<div class="row centered btnrow">
+		<a href="/python/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="/python/user-guide/" class="button no_underline">User Guide</a>
+		<a href="/python/ipython-notebooks/" class="button no_underline">Ipython Notebooks</a>
+		<a href="/python/reference/" class="button no_underline">Reference</a>
+	</div>
+	<div class="tipbox row">
+		<img src="../images/matplotlib_med.png" class="api-thum-img" alt="Matplotlib logo">
+	    <p>Are you a <strong>Matplotlib</strong> user? Great! You can create interactive plotly figures with the matplotlib syntax that you know and love. Check out <a href="/matplotlib/">our matplotlib figure converter page</a> for examples and documentation!<p>
+	</div>
+		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
+
+	<h2>Documentation Examples</h2>
+		{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","python"  | where:"has_thumbnail",true %}
+		{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","python" %}
+		
+		{% include documentation_eg.html %}
