--- a/index.html
+++ b/index.html
@@ -1,14 +1,129 @@
-<!doctype html>
+---
+title: Plotly API
+---
+
+<!DOCTYPE html>
 <html>
-  <head>
-  </head>
+    <head>
+
+	<!-- Fonts -->
+	<link rel="stylesheet" type="text/css" href="/fonts/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="/css/plotly_icons.css" />
+    <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
+  	
+    	
+	<!-- Stytlesheets -->
+	<link rel="stylesheet" type="text/css" href="/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="/css/base.css">
+	<link rel="stylesheet" type="text/css" href="/css/layout_block.css">
+	<link rel="stylesheet" type="text/css" href="/css/modules.css">
+	<link rel="stylesheet" type="text/css" href="/css/state.css">
+  
+	<!-- Icon -->
+	<link rel="shortcut icon" href="images/plotly-ico.png" type="image/x-icon" />
+	 
+	<!-- META TAGS -->
+	{% include seo.html %}
+
+	</head>
   <body>
-	<li><a href="/python">python</a></li>
-	<li><a href="/r">r</a></li>
-	<li><a href="/ggplot2">gplot2</a></li>
-	<li><a href="/julia">julia</a></li>
-	<li><a href="/matplotlib">matplotlib</a></li>
-	<li><a href="/node_js">node.js</a></li>
-	<li><a href="/matlab">matlab</a></li>
+	{% include header.html %}
+	
+	
+	<div class="api-splash row">
+		<h1 class="white">Plotly API LIBRARIES</h1>
+		<h4 class="white">D3.js graphics for Python, MATLAB, R and more</h4>
+	</div>
+	<div class="container">
+			<div class="row api-sect-padding">
+				<div class="row">
+					<h3 class="centered">Download free clients for</h3>
+				</div>
+				<div class="row">
+					<div class="two columns offset-by-three">
+						<img src="images/python.png" alt="python">
+					</div>
+					<div class="two columns">
+						<img src="images/MATLAB.png" alt="MATLAB">
+					</div>
+					<div class="two columns">
+						<img src="images/r.png" alt="R">
+					</div>
+				</div>
+			</div>
+		  
+			<div>
+				<!-- SCIENTIFIC GRAPHING -->
+				<div class="row">
+					<h6 class="inline-big centeredsmall">Scientific graphing</h6>
+					<a href="/python" class="button no_underline centeredsmall">Python</a>
+					<a href="/matlab" class="button no_underline centeredsmall">MATLAB</a>
+					<a href="/r"  class="button no_underline centeredsmall">R</a>
+					<a href="/node_js"  class="button no_underline centeredsmall">Node.js</a>
+					<a href="/julia"  class="button no_underline centeredsmall">Julia</a>
+					<a href="https://plot.ly/product/excel-add-in/"  class="button no_underline centeredsmall">Excel</a>
+					<br>
+					<div>
+						<p>Libraries for scientists, engineers, and programmers who want to graph and share their data.</p>
+					</div>
+				</div>
+
+				<!-- FIGURE CONVERTERS -->
+
+				<div class="row">
+					<h6 class="inline-big centeredsmall">Figure converters</h6>
+					<h6 class="inline-big centeredsmall">Figure converters</h6>
+					<a href="/matplotlib/"  class="button no_underline centeredsmall">matplotlib</a>
+					<a href="/ggplot2/"  class="button no_underline centeredsmall">ggplot2</a>
+					<a href="https://github.com/plotly/Igor-Pro-Graph-Converter" target="_blank"  class="button no_underline centeredsmall">Igor Pro</a>
+					<br>
+					<div>
+						<p>Convert your figures into beautiful, online, shareable Plotly graphs!</p>
+					</div>
+				</div>
+
+				<!-- HARDWARE -->
+
+				<div class="row">
+					<h6 class="inline-big centeredsmall">Hardware and makers</h6>
+					<a href="https://github.com/plotly/arduino-api"  class="button no_underline centeredsmall">Arduino</a>
+					<a href="https://plot.ly/workshop/"  class="button no_underline centeredsmall">Plotly Workshop</a>
+					<br>
+					<div>
+						<p>Libraries and examples for hardware hackers who want to graph and share their data. Read more in <a href="http://bit.ly/1hKjqy9">Make Magazine</a>.</p>
+					</div>
+				</div>
+
+					<!-- PLOTLYJS -->
+
+				<div class="row">
+					<h6 class="inline-big centeredsmall">Enterprise graphing</h6>
+					<a href="/plotly_js"  class="button no_underline centeredsmall">Plotly.js</a>
+					<br>
+					<div>
+						<p>The client-side interactive JavaScript library that powers Plotly.</p>
+					</div>
+				</div>
+
+					<!-- API PROTOCOL-->
+
+				<div class="row">
+					<h6 class="inline-big centeredsmall">API Protocol</h6>
+					<a href="/rest" class="button no_underline centeredsmall">REST API</a>
+					<a href="/streaming" class="button no_underline centeredsmall">Streaming API</a>
+					<br>
+					<div>
+						<p>For programmers who want to roll their own libraries.</p>
+					</div>
+				</div>
+			</div>
+	</div>
+	
+
+	
+	
+	
+	
+	{% include footer.html %}  
   </body>
 </html>
