--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -1,29 +1,20 @@
 ---
 permalink: /ggplot2
 meta_description: "Omggg!"
-layout: base
+layout: langindex
+language: ggplot2
 ---
 
-{% assign examples = site.posts | where:"page_type":"example_index" | where:"language","ggplot2"  | where:"has_thumbnail",true %}
-{% for page in examples %}
-    {% assign loopindex = forloop.index | modulo: 4 %}
-        {% if loopindex == 1 %}
-        <div class="row">
-        {% endif %}
-            <div class="col s12 m4 l3">
-                <div class="card">
-                    <a href="/{{page.permalink}}">
-                        <div class="card-content">
-                            <span class="card-title blue-grey-text">{{page.name}}</span>
-                            <img class="thumbnail" src="{{page.thumbnail}}" >
-                        </div>
-                    </a>
-                </div>
-            </div>
-        {% if loopindex == 0 %}
-        </div>
-        {% endif %}
-{% endfor %}
-        {% if loopindex != 0 %}
-        </div>
-        {% endif %}
+<h1 class="centered">Plotly ggplot2 Library</h1>
+<h3 class="centered">Publish your ggplot2 figures to the web with one line!</h3>
+	<div class="row centered btnrow">
+		<a href="/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="/user-guide/" class="button no_underline">User Guide</a>
+	</div>
+		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
+
+	<h2>Documentation Examples</h2>
+		{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","ggplot2"  | where:"has_thumbnail",true %}
+		{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","ggplot2" %}
+		
+		{% include documentation_eg.html %}
