--- a/_posts/2015-04-05-r-index.html
+++ b/_posts/2015-04-05-r-index.html
@@ -1,29 +1,24 @@
 ---
 permalink: /r
-meta_description: "Omggg!"
-layout: base
+meta_description: "R in Plotly!"
+layout: langindex
+language: r
 ---
 
-{% assign examples = site.posts | where:"page_type":"example_index" | where:"language","r" | where:"has_thumbnail",true %}
-{% for page in examples %}
-    {% assign loopindex = forloop.index | modulo: 4 %}
-        {% if loopindex == 1 %}
-        <div class="row">
-        {% endif %}
-            <div class="col s12 m4 l3">
-                <div class="card">
-                    <a href="/{{page.permalink}}">
-                        <div class="card-content">
-                            <span class="card-title blue-grey-text">{{page.name}}</span>
-                            <img class="thumbnail" src="{{page.thumbnail}}" >
-                        </div>
-                    </a>
-                </div>
-            </div>
-        {% if loopindex == 0 %}
-        </div>
-        {% endif %}
-{% endfor %}
-        {% if loopindex != 0 %}
-        </div>
-        {% endif %}
+<h1 class="centered">Plotly R Library</h1>
+	<div class="row centered btnrow">
+		<a href="/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="/user-guide/" class="button no_underline">User Guide</a>
+		<a href="/reference/" class="button no_underline">Reference</a>
+	</div>
+	<div class="tipbox row">
+		<img src="/images/ggplot.png" class="api-thum-img" alt="ggplot2 logo">
+	    <p>Are you a <strong>ggplot2</strong> user? Great! You can create interactive plotly figures with the ggplot2 syntax that you know and love. Check out <a href="/ggplot2/">our ggplot2 figure converter page</a> for examples and documentation!<p>
+	</div>
+		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
+
+	<h2>Documentation Examples</h2>
+		{% assign languagelistimg = site.posts | where:"page_type":"example_index" | where:"language","r"  | where:"has_thumbnail",true %}
+		{% assign languagelist = site.posts | where:"page_type":"example_index" | where:"language","r" %}
+		
+		{% include documentation_eg.html %}
