--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -1,6 +1,7 @@
 ---
+name: GGPLOT2 Figures Online with Plotly
 permalink: /ggplot2
-meta_description: "Omggg!"
+description: Publish your ggplot2 figures to the web with one line of code! Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
 language: ggplot2
 ---
