--- a/_posts/2015-04-05-julia-index.html
+++ b/_posts/2015-04-05-julia-index.html
@@ -1,6 +1,7 @@
 ---
+name: Plotly's Julia Graphing Library
 permalink: /julia
-meta_description: "Omggg!"
+description: Plotly's Julia graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
 language: julia
 ---
