--- a/_posts/2015-04-05-matlab-index.html
+++ b/_posts/2015-04-05-matlab-index.html
@@ -1,6 +1,7 @@
 ---
+name: Plotly's MATLAB Graphing Library
 permalink: /matlab
-meta_description: "Plotly&#39;s MATLAB graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts"
+description: Plotly's MATLAB graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
 language: matlab
 ---
