--- a/_posts/2015-04-05-node_js-index.html
+++ b/_posts/2015-04-05-node_js-index.html
@@ -1,6 +1,7 @@
 ---
+name: Plotly's Nodejs Graphing Library
 permalink: /node_js
-meta_description: How to make a graphs in {language}. {num_categories} examples of colored, horizontal, and normal histogram bar charts.
+description: Plotly's Nodejs graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
 language: node_js
 ---
