--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -1,6 +1,7 @@
 ---
+name: Plotly's Scientific JavaScript Graphing Library
 permalink: /plotly_js
-meta_description: "Omggg!"
+description: Pltoly's scientific JavaScript graphing library for web-applications and dashboards. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
 language: plotly_js
 ---
