--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@ title: Plotly API
     <head>
 
 	<!-- Fonts -->
-	<link rel="stylesheet" type="text/css" href="/fonts/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="/css/plotly_icons.css" />
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/fonts/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/plotly_icons.css" />
     <link href="//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700" rel="stylesheet" type="text/css" />
   	
     	
 	<!-- Stytlesheets -->
-	<link rel="stylesheet" type="text/css" href="/css/normalize.css">
-	<link rel="stylesheet" type="text/css" href="/css/base.css">
-	<link rel="stylesheet" type="text/css" href="/css/layout_block.css">
-	<link rel="stylesheet" type="text/css" href="/css/modules.css">
-	<link rel="stylesheet" type="text/css" href="/css/state.css">
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/normalize.css">
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/base.css">
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/layout_block.css">
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/modules.css">
+	<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/state.css">
   
 	<!-- Icon -->
-	<link rel="shortcut icon" href="images/plotly-ico.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="{{ site.baseurl }}/images/plotly-ico.png" type="image/x-icon" />
 	 
 	<!-- META TAGS -->
 	{% include seo.html %}
@@ -41,13 +41,13 @@ title: Plotly API
 				</div>
 				<div class="row">
 					<div class="two columns offset-by-three">
-						<img src="images/python.png" alt="python">
+						<img src="{{ site.baseurl }}/images/python.png" alt="python">
 					</div>
 					<div class="two columns">
-						<img src="images/MATLAB.png" alt="MATLAB">
+						<img src="{{ site.baseurl }}/images/MATLAB.png" alt="MATLAB">
 					</div>
 					<div class="two columns">
-						<img src="images/r.png" alt="R">
+						<img src="{{ site.baseurl }}/images/r.png" alt="R">
 					</div>
 				</div>
 			</div>
@@ -56,11 +56,11 @@ title: Plotly API
 				<!-- SCIENTIFIC GRAPHING -->
 				<div class="row">
 					<h6 class="inline-big centeredsmall">Scientific graphing</h6>
-					<a href="/python" class="button no_underline centeredsmall">Python</a>
-					<a href="/matlab" class="button no_underline centeredsmall">MATLAB</a>
-					<a href="/r"  class="button no_underline centeredsmall">R</a>
-					<a href="/node_js"  class="button no_underline centeredsmall">Node.js</a>
-					<a href="/julia"  class="button no_underline centeredsmall">Julia</a>
+					<a href="{{ site.baseurl }}/python" class="button no_underline centeredsmall">Python</a>
+					<a href="{{ site.baseurl }}/matlab" class="button no_underline centeredsmall">MATLAB</a>
+					<a href="{{ site.baseurl }}/r"  class="button no_underline centeredsmall">R</a>
+					<a href="{{ site.baseurl }}/node_js"  class="button no_underline centeredsmall">Node.js</a>
+					<a href="{{ site.baseurl }}/julia"  class="button no_underline centeredsmall">Julia</a>
 					<a href="https://plot.ly/product/excel-add-in/"  class="button no_underline centeredsmall">Excel</a>
 					<br>
 					<div>
@@ -72,9 +72,8 @@ title: Plotly API
 
 				<div class="row">
 					<h6 class="inline-big centeredsmall">Figure converters</h6>
-					<h6 class="inline-big centeredsmall">Figure converters</h6>
-					<a href="/matplotlib/"  class="button no_underline centeredsmall">matplotlib</a>
-					<a href="/ggplot2/"  class="button no_underline centeredsmall">ggplot2</a>
+					<a href="{{ site.baseurl }}/matplotlib/"  class="button no_underline centeredsmall">matplotlib</a>
+					<a href="{{ site.baseurl }}/ggplot2/"  class="button no_underline centeredsmall">ggplot2</a>
 					<a href="https://github.com/plotly/Igor-Pro-Graph-Converter" target="_blank"  class="button no_underline centeredsmall">Igor Pro</a>
 					<br>
 					<div>
@@ -98,7 +97,7 @@ title: Plotly API
 
 				<div class="row">
 					<h6 class="inline-big centeredsmall">Enterprise graphing</h6>
-					<a href="/plotly_js"  class="button no_underline centeredsmall">Plotly.js</a>
+					<a href="{{ site.baseurl }}/plotly_js"  class="button no_underline centeredsmall">Plotly.js</a>
 					<br>
 					<div>
 						<p>The client-side interactive JavaScript library that powers Plotly.</p>
@@ -109,8 +108,8 @@ title: Plotly API
 
 				<div class="row">
 					<h6 class="inline-big centeredsmall">API Protocol</h6>
-					<a href="/rest" class="button no_underline centeredsmall">REST API</a>
-					<a href="/streaming" class="button no_underline centeredsmall">Streaming API</a>
+					<a href="{{ site.baseurl }}/rest" class="button no_underline centeredsmall">REST API</a>
+					<a href="{{ site.baseurl }}/streaming" class="button no_underline centeredsmall">Streaming API</a>
 					<br>
 					<div>
 						<p>For programmers who want to roll their own libraries.</p>
