--- a/_posts/2015-04-05-matlab-index.html
+++ b/_posts/2015-04-05-matlab-index.html
@@ -11,9 +11,9 @@ language: matlab
 
 
 	<div class="row centered btnrow">
-		<a href="/python/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="/python/user-guide/" class="button no_underline">User Guide</a>
-		<a href="/python/reference/" class="button no_underline">Reference</a>
+		<a href="/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="/user-guide/" class="button no_underline">User Guide</a>
+		<a href="/reference/" class="button no_underline">Reference</a>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
