--- a/_posts/2015-04-05-python-index.html
+++ b/_posts/2015-04-05-python-index.html
@@ -8,10 +8,10 @@ language: python
 
 <h1 class="centered">Plotly Python Library</h1>
 	<div class="row centered btnrow">
-		<a href="/python/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="/python/user-guide/" class="button no_underline">User Guide</a>
-		<a href="/python/ipython-notebooks/" class="button no_underline">Ipython Notebooks</a>
-		<a href="/python/reference/" class="button no_underline">Reference</a>
+		<a href="/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="/user-guide/" class="button no_underline">User Guide</a>
+		<a href="/ipython-notebooks/" class="button no_underline">Ipython Notebooks</a>
+		<a href="/reference/" class="button no_underline">Reference</a>
 	</div>
 	<div class="tipbox row">
 		<img src="../images/matplotlib_med.png" class="api-thum-img" alt="Matplotlib logo">
