--- a/_posts/2015-04-05-ggplot2-index.html
+++ b/_posts/2015-04-05-ggplot2-index.html
@@ -9,8 +9,8 @@ language: ggplot2
 <h1 class="centered">Plotly ggplot2 Library</h1>
 <h3 class="centered">Publish your ggplot2 figures to the web with one line!</h3>
 	<div class="row centered btnrow">
-		<a href="/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="/user-guide/" class="button no_underline">User Guide</a>
+		<a href="{{ site.baseurl }}/ggplot2/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="{{ site.baseurl }}/ggplot2/user-guide/" class="button no_underline">User Guide</a>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
