--- a/_posts/2015-04-05-matplotlib-index.html
+++ b/_posts/2015-04-05-matplotlib-index.html
@@ -8,8 +8,8 @@ language: matplotlib
 
 <h1 class="centered">Plotly Matplotlib Library</h1>
 	<div class="row centered btnrow">
-		<a href="/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="/user-guide/" class="button no_underline">User Guide</a>
+		<a href="{{ site.baseurl }}/matplotlib/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="{{ site.baseurl }}/matplotlib/user-guide/" class="button no_underline">User Guide</a>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
