--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -8,8 +8,8 @@ language: plotly_js
 
 <h1 class="centered">Plotly JavaScript Graphing Library</h1>
 	<div class="row centered btnrow">
-		<a href="/reference/" class="button no_underline">Reference</a>
-		<a href="/showcase/" class="button no_underline">Plotly.js Showcase</a>
+		<a href="{{ site.baseurl }}/plotly_js/reference/" class="button no_underline">Reference</a>
+		<a href="{{ site.baseurl }}/plotly_js/showcase/" class="button no_underline">Plotly.js Showcase</a>
 	</div>
 
 		<p><b>plotly.js</b> is our client-side interactive JavaScript graphing library. For private websites within an enterprise, contact <a href="mailto:feedback@plot.ly">sales@plot.ly</a> to purchase a licensing and support plan. Questions? <a href="mailto:feedback@plot.ly">sales@plot.ly</a></p>
