--- a/_posts/2015-04-05-python-index.html
+++ b/_posts/2015-04-05-python-index.html
@@ -8,14 +8,14 @@ language: python
 
 <h1 class="centered">Plotly Python Library</h1>
 	<div class="row centered btnrow">
-		<a href="/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="/user-guide/" class="button no_underline">User Guide</a>
-		<a href="/ipython-notebooks/" class="button no_underline">Ipython Notebooks</a>
-		<a href="/reference/" class="button no_underline">Reference</a>
+		<a href="{{ site.baseurl }}/python/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="{{ site.baseurl }}/python/user-guide/" class="button no_underline">User Guide</a>
+		<a href="{{ site.baseurl }}/python/ipython-notebooks/" class="button no_underline">Ipython Notebooks</a>
+		<a href="{{ site.baseurl }}/python/reference/" class="button no_underline">Reference</a>
 	</div>
 	<div class="tipbox row">
-		<img src="../images/matplotlib_med.png" class="api-thum-img" alt="Matplotlib logo">
-	    <p>Are you a <strong>Matplotlib</strong> user? Great! You can create interactive plotly figures with the matplotlib syntax that you know and love. Check out <a href="/matplotlib/">our matplotlib figure converter page</a> for examples and documentation!<p>
+		<img src="{{ site.baseurl }}/images/matplotlib_med.png" class="api-thum-img" alt="Matplotlib logo">
+	    <p>Are you a <strong>Matplotlib</strong> user? Great! You can create interactive plotly figures with the matplotlib syntax that you know and love. Check out <a href="{{ site.baseurl }}/matplotlib/">our matplotlib figure converter page</a> for examples and documentation!<p>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
