--- a/_posts/2015-04-05-r-index.html
+++ b/_posts/2015-04-05-r-index.html
@@ -8,13 +8,13 @@ language: r
 
 <h1 class="centered">Plotly R Library</h1>
 	<div class="row centered btnrow">
-		<a href="/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="/user-guide/" class="button no_underline">User Guide</a>
-		<a href="/reference/" class="button no_underline">Reference</a>
+		<a href="{{ site.baseurl }}/r/getting-started/" class="button no_underline">Getting Started</a>
+		<a href="{{ site.baseurl }}/r/user-guide/" class="button no_underline">User Guide</a>
+		<a href="{{ site.baseurl }}/r/reference/" class="button no_underline">Reference</a>
 	</div>
 	<div class="tipbox row">
-		<img src="/images/ggplot.png" class="api-thum-img" alt="ggplot2 logo">
-	    <p>Are you a <strong>ggplot2</strong> user? Great! You can create interactive plotly figures with the ggplot2 syntax that you know and love. Check out <a href="/ggplot2/">our ggplot2 figure converter page</a> for examples and documentation!<p>
+		<img src="{{ site.baseurl }}/images/ggplot.png" class="api-thum-img" alt="ggplot2 logo">
+	    <p>Are you a <strong>ggplot2</strong> user? Great! You can create interactive plotly figures with the ggplot2 syntax that you know and love. Check out <a href="{{ site.baseurl }}/ggplot2/">our ggplot2 figure converter page</a> for examples and documentation!<p>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
