--- a/_posts/2015-04-05-julia-index.html
+++ b/_posts/2015-04-05-julia-index.html
@@ -1,5 +1,5 @@
 ---
-name: Plotly's Julia Graphing Library
+title: Plotly's Julia Graphing Library
 permalink: /julia
 description: Plotly's Julia graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
@@ -9,7 +9,7 @@ language: julia
 <h1 class="centered">Plotly Julia Library</h1>
 	<div class="row centered btnrow">
 		<a href="{{ site.baseurl }}/julia/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="{{ site.baseurl }}/julia/reference/" class="button no_underline">Reference</a>
+		<a href="https://plot.ly/julia/reference/" class="button no_underline">Reference</a>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
