--- a/_posts/2015-04-05-matlab-index.html
+++ b/_posts/2015-04-05-matlab-index.html
@@ -1,5 +1,5 @@
 ---
-name: Plotly's MATLAB Graphing Library
+title: Plotly's MATLAB Graphing Library
 permalink: /matlab
 description: Plotly's MATLAB graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
@@ -12,8 +12,8 @@ language: matlab
 
 	<div class="row centered btnrow">
 		<a href="{{ site.baseurl }}/matlab/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="{{ site.baseurl }}/matlab/user-guide/" class="button no_underline">User Guide</a>
-		<a href="{{ site.baseurl }}/matlab/reference/" class="button no_underline">Reference</a>
+		<a href="https://plot.ly/matlab/user-guide/" class="button no_underline">User Guide</a>
+		<a href="https://plot.ly/matlab/reference/" class="button no_underline">Reference</a>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
