--- a/_posts/2015-04-05-matplotlib-index.html
+++ b/_posts/2015-04-05-matplotlib-index.html
@@ -1,5 +1,5 @@
 ---
-name: Matplotlib Figures Online with Plotly
+title: Matplotlib Figures Online with Plotly
 permalink: /matplotlib
 description: Publish your Matplotlib figures to the web with one line of code! Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
@@ -9,7 +9,7 @@ language: matplotlib
 <h1 class="centered">Plotly Matplotlib Library</h1>
 	<div class="row centered btnrow">
 		<a href="{{ site.baseurl }}/matplotlib/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="{{ site.baseurl }}/matplotlib/user-guide/" class="button no_underline">User Guide</a>
+		<a href="https://plot.ly/python/matplotlib-to-plotly-tutorial/" class="button no_underline">User Guide</a>
 	</div>
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
 
