--- a/_posts/2015-04-05-node_js-index.html
+++ b/_posts/2015-04-05-node_js-index.html
@@ -1,5 +1,5 @@
 ---
-name: Plotly's Nodejs Graphing Library
+title: Plotly's Nodejs Graphing Library
 permalink: /node_js
 description: Plotly's Nodejs graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
@@ -9,7 +9,7 @@ language: node_js
 <h1 class="centered">Plotly Nodejs Library</h1>
 	<div class="row centered btnrow">
 		<a href="{{ site.baseurl }}/node_js/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="{{ site.baseurl }}/node_js/reference/" class="button no_underline">Reference</a>
+		<a href="https://plot.ly/nodejs/reference/" class="button no_underline">Reference</a>
 	</div>
 
 		<p>Want to see a feature added to the library? <a href="mailto:feedback@plot.ly">Get in touch!</a> We'd love to hear your ideas.</p>
