--- a/_posts/2015-04-05-plotly_js-index.html
+++ b/_posts/2015-04-05-plotly_js-index.html
@@ -1,5 +1,5 @@
 ---
-name: Plotly's Scientific JavaScript Graphing Library
+title: Plotly's Scientific JavaScript Graphing Library
 permalink: /plotly_js
 description: Pltoly's scientific JavaScript graphing library for web-applications and dashboards. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
@@ -8,8 +8,8 @@ language: plotly_js
 
 <h1 class="centered">Plotly JavaScript Graphing Library</h1>
 	<div class="row centered btnrow">
-		<a href="{{ site.baseurl }}/plotly_js/reference/" class="button no_underline">Reference</a>
-		<a href="{{ site.baseurl }}/plotly_js/showcase/" class="button no_underline">Plotly.js Showcase</a>
+		<a href="https://plot.ly/javascript-graphing-library/reference/" class="button no_underline">Reference</a>
+		<a href="https://plot.ly/javascript-graphing-library/showcase/" class="button no_underline">Plotly.js Showcase</a>
 	</div>
 
 		<p><b>plotly.js</b> is our client-side interactive JavaScript graphing library. For private websites within an enterprise, contact <a href="mailto:feedback@plot.ly">sales@plot.ly</a> to purchase a licensing and support plan. Questions? <a href="mailto:feedback@plot.ly">sales@plot.ly</a></p>
