--- a/_posts/2015-04-05-python-index.html
+++ b/_posts/2015-04-05-python-index.html
@@ -1,5 +1,5 @@
 ---
-name: Plotly's Python Graphing Library
+title: Plotly's Python Graphing Library
 permalink: /python
 description: "Plotly's Python graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts"
 layout: langindex
@@ -9,9 +9,9 @@ language: python
 <h1 class="centered">Plotly Python Library</h1>
 	<div class="row centered btnrow">
 		<a href="{{ site.baseurl }}/python/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="{{ site.baseurl }}/python/user-guide/" class="button no_underline">User Guide</a>
+		<a href="https://plot.ly/python/user-guide/" class="button no_underline">User Guide</a>
 		<a href="{{ site.baseurl }}/python/ipython-notebooks/" class="button no_underline">Ipython Notebooks</a>
-		<a href="{{ site.baseurl }}/python/reference/" class="button no_underline">Reference</a>
+		<a href="https://plot.ly/python/reference/" class="button no_underline">Reference</a>
 	</div>
 	<div class="tipbox row">
 		<img src="{{ site.baseurl }}/images/matplotlib_med.png" class="api-thum-img" alt="Matplotlib logo">
