--- a/_posts/2015-04-05-r-index.html
+++ b/_posts/2015-04-05-r-index.html
@@ -1,5 +1,5 @@
 ---
-name: Plotly's R Graphing Library
+title: Plotly's R Graphing Library
 permalink: /r
 description: Plotly's R graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: langindex
@@ -9,8 +9,8 @@ language: r
 <h1 class="centered">Plotly R Library</h1>
 	<div class="row centered btnrow">
 		<a href="{{ site.baseurl }}/r/getting-started/" class="button no_underline">Getting Started</a>
-		<a href="{{ site.baseurl }}/r/user-guide/" class="button no_underline">User Guide</a>
-		<a href="{{ site.baseurl }}/r/reference/" class="button no_underline">Reference</a>
+		<a href="https://plot.ly/r/user-guide/" class="button no_underline">User Guide</a>
+		<a href="https://plot.ly/r/reference/" class="button no_underline">Reference</a>
 	</div>
 	<div class="tipbox row">
 		<img src="{{ site.baseurl }}/images/ggplot.png" class="api-thum-img" alt="ggplot2 logo">
