--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@ title: Plotly API
 	
 	
 	<div class="api-splash row">
-		<h1 class="white">Plotly API LIBRARIES</h1>
-		<h4 class="white">D3.js graphics for Python, MATLAB, R and more</h4>
+		<h1 class="white">Plotly API libraries</h1>
+		<h4 class="white">D3.js plots and dashboards for Python, MATLAB, R and more</h4>
 	</div>
 	<div class="container">
 			<div class="row api-sect-padding">
@@ -40,17 +40,36 @@ title: Plotly API
 					<h3 class="centered">Download free clients for</h3>
 				</div>
 				<div class="row">
-					<div class="two columns offset-by-three">
-						<img src="{{ site.baseurl }}/images/python.png" alt="python">
-					</div>
-					<div class="two columns">
-						<img src="{{ site.baseurl }}/images/MATLAB.png" alt="MATLAB">
-					</div>
-					<div class="two columns">
-						<img src="{{ site.baseurl }}/images/r.png" alt="R">
-					</div>
+					<a href="{{ site.baseurl }}/python/getting-started/"><div class="two columns offset-by-three alltutcol categories-apis" onmouseover="movingInImgOp(pythonapi-img, pythonapi-text)" onmouseout="movingOutImgOp(pythonapi-img, pythonapi-text)">
+						<div id="pythonapi-img">
+							<img src="{{ site.baseurl }}/images/python.png" alt="python">
+						</div>
+						<div id="pythonapi-text" style="display:none;">
+							<h6>Plotly Python API</h6>
+						</div>
+					</div></a>
+					<a href="{{ site.baseurl }}/matlab/getting-started/"><div class="two columns alltutcol categories-apis" onmouseover="movingInImgOp(matlabapi-img, matlabapi-text)" onmouseout="movingOutImgOp(matlabapi-img, matlabapi-text)">
+						<div id="matlabapi-img">
+							<img src="{{ site.baseurl }}/images/MATLAB.png" alt="MATLAB">
+						</div>
+						<div id="matlabapi-text" style="display:none;">
+							<h6>Plotly MATLAB API</h6>
+						</div>
+					</div></a>
+					<a href="{{ site.baseurl }}/r/getting-started/"><div class="two columns alltutcol categories-apis" onmouseover="movingInImgOp(r-api-img, r-api-text)" onmouseout="movingOutImgOp(r-api-img, r-api-text)">
+						<div id="r-api-img">
+							<img src="{{ site.baseurl }}/images/r.png" alt="R">
+						</div>
+						<div id="r-api-text" style="display:none;">
+							<h6>Plotly R API</h6>
+						</div>
+					</div></a>
 				</div>
 			</div>
+			
+
+			
+			
 		  
 			<div>
 				<!-- SCIENTIFIC GRAPHING -->
