--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ title: Plotly API
 					<h3 class="centered">Download free clients for</h3>
 				</div>
 				<div class="row">
-					<a href="{{ site.baseurl }}/python/getting-started/"><div class="two columns offset-by-three alltutcol categories-apis" onmouseover="movingInImgOp(pythonapi-img, pythonapi-text)" onmouseout="movingOutImgOp(pythonapi-img, pythonapi-text)">
+					<a href="{{ site.baseurl }}/python/getting-started/"><div class="two columns offset-by-three categories-apis" onmouseover="movingInImgOp(pythonapi-img, pythonapi-text)" onmouseout="movingOutImgOp(pythonapi-img, pythonapi-text)">
 						<div id="pythonapi-img">
 							<img src="{{ site.baseurl }}/images/python.png" alt="python">
 						</div>
@@ -48,7 +48,7 @@ title: Plotly API
 							<h6>Plotly Python API</h6>
 						</div>
 					</div></a>
-					<a href="{{ site.baseurl }}/matlab/getting-started/"><div class="two columns alltutcol categories-apis" onmouseover="movingInImgOp(matlabapi-img, matlabapi-text)" onmouseout="movingOutImgOp(matlabapi-img, matlabapi-text)">
+					<a href="{{ site.baseurl }}/matlab/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(matlabapi-img, matlabapi-text)" onmouseout="movingOutImgOp(matlabapi-img, matlabapi-text)">
 						<div id="matlabapi-img">
 							<img src="{{ site.baseurl }}/images/MATLAB.png" alt="MATLAB">
 						</div>
@@ -56,7 +56,7 @@ title: Plotly API
 							<h6>Plotly MATLAB API</h6>
 						</div>
 					</div></a>
-					<a href="{{ site.baseurl }}/r/getting-started/"><div class="two columns alltutcol categories-apis" onmouseover="movingInImgOp(r-api-img, r-api-text)" onmouseout="movingOutImgOp(r-api-img, r-api-text)">
+					<a href="{{ site.baseurl }}/r/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(r-api-img, r-api-text)" onmouseout="movingOutImgOp(r-api-img, r-api-text)">
 						<div id="r-api-img">
 							<img src="{{ site.baseurl }}/images/r.png" alt="R">
 						</div>
