img hover update

--- a/index.html
+++ b/index.html
@@ -40,27 +40,27 @@ title: Plotly API
 					<h3 class="centered">Download free clients for</h3>
 				</div>
 				<div class="row">
-					<a href="{{ site.baseurl }}/python/getting-started/"><div class="two columns offset-by-three categories-apis" onmouseover="movingInImgOp(pythonapi-img, pythonapi-text)" onmouseout="movingOutImgOp(pythonapi-img, pythonapi-text)">
-						<div id="pythonapi-img">
+					<a href="{{ site.baseurl }}/python/getting-started/"><div class="two columns offset-by-three categories-apis" onmouseover="movingInImgOp(pythonapi_img, pythonapi_text)" onmouseout="movingOutImgOp(pythonapi_img, pythonapi_text)">
+						<div id="pythonapi_img">
 							<img src="{{ site.baseurl }}/images/python.png" alt="python">
 						</div>
-						<div id="pythonapi-text" style="display:none;">
+						<div id="pythonapi_text" style="display:none;">
 							<h6>Plotly Python API</h6>
 						</div>
 					</div></a>
 					<a href="{{ site.baseurl }}/matlab/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(matlabapi-img, matlabapi-text)" onmouseout="movingOutImgOp(matlabapi-img, matlabapi-text)">
-						<div id="matlabapi-img">
+						<div id="matlabapi_img">
 							<img src="{{ site.baseurl }}/images/MATLAB.png" alt="MATLAB">
 						</div>
-						<div id="matlabapi-text" style="display:none;">
+						<div id="matlabapi_text" style="display:none;">
 							<h6>Plotly MATLAB API</h6>
 						</div>
 					</div></a>
 					<a href="{{ site.baseurl }}/r/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(r-api-img, r-api-text)" onmouseout="movingOutImgOp(r-api-img, r-api-text)">
-						<div id="r-api-img">
+						<div id="r_api_img">
 							<img src="{{ site.baseurl }}/images/r.png" alt="R">
 						</div>
-						<div id="r-api-text" style="display:none;">
+						<div id="r_api_text" style="display:none;">
 							<h6>Plotly R API</h6>
 						</div>
 					</div></a>
