api hover update

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ title: Plotly API
 							<h6>Plotly Python API</h6>
 						</div>
 					</div></a>
-					<a href="{{ site.baseurl }}/matlab/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(matlabapi-img, matlabapi-text)" onmouseout="movingOutImgOp(matlabapi-img, matlabapi-text)">
+					<a href="{{ site.baseurl }}/matlab/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(matlabapi_img, matlabapi_text)" onmouseout="movingOutImgOp(matlabapi_img, matlabapi_text)">
 						<div id="matlabapi_img">
 							<img src="{{ site.baseurl }}/images/MATLAB.png" alt="MATLAB">
 						</div>
@@ -56,7 +56,7 @@ title: Plotly API
 							<h6>Plotly MATLAB API</h6>
 						</div>
 					</div></a>
-					<a href="{{ site.baseurl }}/r/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(r-api-img, r-api-text)" onmouseout="movingOutImgOp(r-api-img, r-api-text)">
+					<a href="{{ site.baseurl }}/r/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(r_api_img, r_api_text)" onmouseout="movingOutImgOp(r_api_img, r_api_text)">
 						<div id="r_api_img">
 							<img src="{{ site.baseurl }}/images/r.png" alt="R">
 						</div>
