--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@ title: Plotly API
 
 	</head>
   <body>
+	<div class="api-splash row">
 	{% include header.html %}
 	
 	
-	<div class="api-splash row">
+	
 		<h1 class="white">Plotly API libraries</h1>
 		<h4 class="white">D3.js plots and dashboards for Python, MATLAB, R and more</h4>
 	</div>
@@ -42,7 +43,7 @@ title: Plotly API
 				<div class="row">
 					<a href="{{ site.baseurl }}/python/getting-started/"><div class="two columns offset-by-three categories-apis" onmouseover="movingInImgOp(pythonapi_img, pythonapi_text)" onmouseout="movingOutImgOp(pythonapi_img, pythonapi_text)">
 						<div id="pythonapi_img">
-							<img src="{{ site.baseurl }}/images/python.png" alt="python">
+							<img src="{{ site.baseurl }}/images/python-small.png" alt="python">
 						</div>
 						<div id="pythonapi_text" style="display:none;">
 							<h6>Plotly Python API</h6>
@@ -50,7 +51,7 @@ title: Plotly API
 					</div></a>
 					<a href="{{ site.baseurl }}/matlab/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(matlabapi_img, matlabapi_text)" onmouseout="movingOutImgOp(matlabapi_img, matlabapi_text)">
 						<div id="matlabapi_img">
-							<img src="{{ site.baseurl }}/images/MATLAB.png" alt="MATLAB">
+							<img src="{{ site.baseurl }}/images/MATLAB-small.png" alt="MATLAB">
 						</div>
 						<div id="matlabapi_text" style="display:none;">
 							<h6>Plotly MATLAB API</h6>
@@ -58,7 +59,7 @@ title: Plotly API
 					</div></a>
 					<a href="{{ site.baseurl }}/r/getting-started/"><div class="two columns categories-apis" onmouseover="movingInImgOp(r_api_img, r_api_text)" onmouseout="movingOutImgOp(r_api_img, r_api_text)">
 						<div id="r_api_img">
-							<img src="{{ site.baseurl }}/images/r.png" alt="R">
+							<img src="{{ site.baseurl }}/images/r-small.png" alt="R">
 						</div>
 						<div id="r_api_text" style="display:none;">
 							<h6>Plotly R API</h6>
