--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@ title: Plotly API
 
 				<div class="row">
 					<h6 class="inline-big centeredsmall">API Protocol</h6>
-					<a href="{{ site.baseurl }}/rest" class="button no_underline centeredsmall">REST API</a>
-					<a href="{{ site.baseurl }}/streaming" class="button no_underline centeredsmall">Streaming API</a>
+					<a href="https://plot.ly/rest/" class="button no_underline centeredsmall">REST API</a>
+					<a href="https://plot.ly/streaming/" class="button no_underline centeredsmall">Streaming API</a>
 					<br>
 					<div>
 						<p>For programmers who want to roll their own libraries.</p>
