getting started python

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title: Plotly API
 						<div id="pythonapi_img">
 							<img src="{{ site.baseurl }}/images/python-small.png" alt="python">
 						</div>
-						<div id="pythonapi_text" style="display:none;">
+						<div id="pythonapi_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly Python API</h6>
 						</div>
 					</div></a>
@@ -52,7 +52,7 @@ title: Plotly API
 						<div id="matlabapi_img">
 							<img src="{{ site.baseurl }}/images/MATLAB-small.png" alt="MATLAB">
 						</div>
-						<div id="matlabapi_text" style="display:none;">
+						<div id="matlabapi_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly MATLAB API</h6>
 						</div>
 					</div></a>
@@ -60,7 +60,7 @@ title: Plotly API
 						<div id="r_api_img">
 							<img src="{{ site.baseurl }}/images/r-small.png" alt="R">
 						</div>
-						<div id="r_api_text" style="display:none;">
+						<div id="r_api_text" class="titlecenterapi" style="display:none;">
 							<h6>Plotly R API</h6>
 						</div>
 					</div></a>
