--- a/_posts/python/getting-started.html
+++ b/_posts/python/getting-started.html
@@ -1,8 +1,8 @@
  ---
-title: Getting Started: Plotly for Python
+title: Getting Started - Plotly for Python
 permalink: /python/getting-started
 description: Plotly's Python graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
-layout: base
+layout: get-start.html
 language: python
 ---
 
