Getting started pages

--- a/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
+++ b/_posts/matlab/getting-started/2015-05-25-getting-started_matlab_index.html
@@ -1,8 +1,8 @@
  ---
-title: Getting Started: Plotly for MATLAB
-permalink: /matlab/getting-started
+title: Getting Started Plotly for MATLAB
+permalink: matlab/getting-started
 description: Plotly's MATLAB graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
-layout: get-start.html
+layout: getstart
 language: matlab
 ---
 
@@ -10,7 +10,7 @@ language: matlab
             
     <section class="section">
         <h2>Installation</h2>
-        <div >
+        <div class="content-box">
             <p >
                 Download and uncompress the <a  href="https://github.com/plotly/MATLAB-api/archive/master.zip">Plotly MATLAB library</a>.
             </p>
@@ -19,7 +19,7 @@ language: matlab
 
     <section class="section">
         <h2 >Initialization</h2>
-        <div >
+        <div class="content-box">
             <p >
                 In your MATLAB console, begin by locating the downloaded directory, and running <code>plotlysetup()</code>.
             </p>
@@ -28,11 +28,15 @@ language: matlab
             </p>
 
             <pre >>> cd ~/Downloads/MATLAB-api-master
->> plotlysetup('Nicole_G', 'zd4g6c702b')</pre>
+>> plotlysetup('DemoAccount', 'lr1c37zw81')</pre>
 
             <p >
                 This will set up your credentials and import the Plotly library into your MATLAB toolboxes. You can now delete the downloaded folder!
             </p>
+			<div>
+			<a class="button" href="plot.ly/plot">DISPLAY KEY</a>
+			</div>
+			
 
             
 
@@ -48,7 +52,7 @@ language: matlab
 
     <section class="section">
         <h2 >Start plotting!</h2>
-        <div >
+        <div class="content-box">
             <p >
                 Now you can convert your MATLAB figures into beautiful, interactive, online graphs with <code>fig2plotly()</code>:
             </p>
@@ -66,7 +70,7 @@ fig2plotly()</pre>
 
     <section class="section">
         <h2 >Response</h2>
-        <div >
+        <div class="content-box" >
             <p >
                 Copy and paste the URL into your browser to see your graph!
             </p>
@@ -84,9 +88,9 @@ error: [1x0 char]</pre>
 
 
 
-    <section>
+    <section class="section">
         <h2 >Credentials</h2>
-        <div class="content-box content-box--basic push-half--bottom">
+        <div class="content-box">
             <p >
                 The initialization step places a special
                 <strong>.plotly/.credentials</strong> file in your home
@@ -95,9 +99,9 @@ error: [1x0 char]</pre>
             </p>
             <pre >
 {
-    "username": "Nicole_G",
-    "stream_ids": ["llyogkx30k", "4vjnpg0p9y"],
-    "api_key": "zd4g6c702b"
+    "username": "DemoAccount",
+    "stream_ids": ["ylosqsyet5", "h2ct8btk1s", "oxz4fm883b"],
+    "api_key": "lr1c37zw81"
 }
             </pre>
             <p >
