getting started update

--- a/_posts/plotly_js/3d-line/2015-04-09-3d-line_plotly_js_index.html
+++ b/_posts/plotly_js/3d-line/2015-04-09-3d-line_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: 3D Line Plots
-permalink: plotly_js/3d-line-plots
+permalink: javascript-graphing-library/3d-line-plots
 description: How to make 3D line plots in {language}.
 layout: base
 thumbnail: /images/3d-line.png
