--- a/_posts/plotly_js/bar/2015-04-09-bar_plotly_js_index.html
+++ b/_posts/plotly_js/bar/2015-04-09-bar_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Bar Charts
-permalink: plotly_js/bar-charts
+permalink: javascript-graphing-library/bar-charts
 description: How to make a bar chart in {language}. {num_categories} examples of grouped, stacked, overlaid, and colored bar charts.
 layout: base
 thumbnail: /images/bar.png
