--- a/_posts/plotly_js/callbacks-subsection-placeholder/2015-04-09-callbacks-subsection-placeholder_plotly_js_index.html
+++ b/_posts/plotly_js/callbacks-subsection-placeholder/2015-04-09-callbacks-subsection-placeholder_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Callbacks
-permalink: plotly_js/callbacks
+permalink: javascript-graphing-library/callbacks
 description: NO_META_DESCRIPTION!
 layout: base
 thumbnail: /images/callbacks-subsection-placeholder.png
