--- a/_posts/plotly_js/error-bar/2015-04-09-error-bar_plotly_js_index.html
+++ b/_posts/plotly_js/error-bar/2015-04-09-error-bar_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Error Bars
-permalink: plotly_js/error-bars
+permalink: javascript-graphing-library/error-bars
 description: How to add error bars to a line, scatter, or bar chart. {num_categories} examples of symmetric, asymmetric, horizontal, and colored error bars.
 layout: base
 thumbnail: /images/error-bar.png
