--- a/_posts/plotly_js/heatmap/2015-04-09-heatmap_plotly_js_index.html
+++ b/_posts/plotly_js/heatmap/2015-04-09-heatmap_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Heatmaps
-permalink: plotly_js/heatmaps
+permalink: javascript-graphing-library/heatmaps
 description: How to make a heatmap in {language} with a matrix. {num_categories} examples of colored and labeled heatmaps with custom colorscales.
 layout: base
 thumbnail: /images/heatmap.png
