--- a/_posts/plotly_js/latex/2015-04-09-latex_plotly_js_index.html
+++ b/_posts/plotly_js/latex/2015-04-09-latex_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: LaTeX
-permalink: plotly_js/LaTeX
+permalink: javascript-graphing-library/LaTeX
 description: How to add LaTeX to {language} graphs.
 layout: base
 thumbnail: /images/latex.png
