--- a/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
+++ b/_posts/python/getting-started/2015-05-25-getting-started_python_index.html
@@ -51,7 +51,7 @@ $ python -c "import plotly; plotly.tools.set_credentials_file(username='DemoAcco
             
 				<p >Don't know your API key?
                     <div >
-                        <a class="button" href="https://plot.ly/plot">Display Key</a>
+                        <a class="button no_underline" href="https://plot.ly/plot">Display Key</a>
 
 
                     </div>
@@ -61,7 +61,7 @@ $ python -c "import plotly; plotly.tools.set_credentials_file(username='DemoAcco
 				<p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<bold>Questions? Email support@plot.ly</bold></p>
 
 				<p>In your Terminal, enter:<p>
-				<pre><code>
+				<pre><code class="terminal">
 				$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
 				plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
 				</code></pre>
