--- a/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
+++ b/_posts/julia/getting-started/2015-05-25-getting-started_julia_index.html
@@ -1,5 +1,5 @@
 ---
-title: Getting Started Plotly for Julia
+name: Getting Started Plotly for Julia
 permalink: julia/getting-started
 description: Plotly's Julia graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: getstart
@@ -54,7 +54,7 @@ language: julia
             
                 <p >Don't know your API key?
                     <div>
-                        <a href="plot.ly/plot" class="button" id="display_key">Display Key</div>
+                        <a href="plot.ly/plot" class="button no_underline" id="display_key">Display Key</div>
 
 
                     </div>
@@ -64,7 +64,7 @@ language: julia
 <p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<bold>Questions? Email support@plot.ly</bold></p>
 
 <p>In your Terminal, enter:<p>
-<pre><code>
+<pre><code class="terminal">
 $python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
 plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
 </code></pre>
