--- a/_posts/matplotlib/getting-started/2015-05-25-getting-started_matplotlib_index.html
+++ b/_posts/matplotlib/getting-started/2015-05-25-getting-started_matplotlib_index.html
@@ -1,5 +1,5 @@
 ---
-title: Getting Started: Plotly for Matplotlib
+name: Getting Started: Plotly for Matplotlib
 permalink: matplotlib/getting-started
 description: Plotly's Matplotlib graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: getstart
@@ -53,7 +53,7 @@ $ python -c "import plotly; plotly.tools.set_credentials_file(username='DemoAcco
             
                 <p >Don't know your API key?
                     <div >
-                        <div class="button" id="display_key">Display Key</div>
+                        <div class="button no_underline" id="display_key">Display Key</div>
 
 
                     </div>
@@ -65,7 +65,7 @@ $ python -c "import plotly; plotly.tools.set_credentials_file(username='DemoAcco
 			<p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<bold>Questions? Email support@plot.ly</bold></p>
 
 			<p>In your Terminal, enter:<p>
-			<pre><code>
+			<pre><code class="terminal">
 			$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
 			plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
 			</code></pre>
