--- a/_posts/node_js/getting-started/2015-05-25-getting-started_node_js_index.html
+++ b/_posts/node_js/getting-started/2015-05-25-getting-started_node_js_index.html
@@ -1,5 +1,5 @@
 ---
-title: Getting Started Plotly for Node.js
+name: Getting Started Plotly for Node.js
 permalink: node_js/getting-started
 description: Plotly's Node.js graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: getstart
@@ -40,7 +40,7 @@ language: node_js
             
                 <p >Don't know your API key? If you don't have an account, you will be prompted to sign up.
                     <div >
-                        <a class="button" href="https://plot.ly/plot">Display Key</a>
+                        <a class="button no_underline" href="https://plot.ly/plot">Display Key</a>
 
 
                     </div>
@@ -50,7 +50,7 @@ language: node_js
 				<p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<bold>Questions? Email support@plot.ly</bold></p>
 
 				<p>In your Terminal, enter:<p>
-				<pre><code>
+				<pre><code class="terminal">
 				$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
 				plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
 				</code></pre>
