--- a/_posts/plotly_js/bubble/2015-04-09-bubble_plotly_js_index.html
+++ b/_posts/plotly_js/bubble/2015-04-09-bubble_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Bubble Charts
-permalink: plotly_js/bubble-charts
+permalink: javascript-graphing-library/bubble-charts
 description: How to make a bubble chart in {language}. Examples of scatter charts whose markers have variable color, size, and symbols.
 layout: base
 thumbnail: /images/bubble.png
