--- a/_posts/plotly_js/font/2015-04-09-font_plotly_js_index.html
+++ b/_posts/plotly_js/font/2015-04-09-font_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Text and Font Styling
-permalink: plotly_js/font
+permalink: javascript-graphing-library/font
 description: How to edit and style the font of graphs in {language}.
 layout: base
 thumbnail: /images/font.png
