--- a/_posts/plotly_js/histogram/2015-04-09-histogram_plotly_js_index.html
+++ b/_posts/plotly_js/histogram/2015-04-09-histogram_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Histograms
-permalink: plotly_js/histograms
+permalink: javascript-graphing-library/histograms
 description: How to make a histogram in {language}. {num_categories} examples of colored, horizontal, and normal histogram bar charts.
 layout: base
 thumbnail: /images/histogram.png
