--- a/_posts/plotly_js/insets/2015-04-09-insets_plotly_js_index.html
+++ b/_posts/plotly_js/insets/2015-04-09-insets_plotly_js_index.html
@@ -1,6 +1,6 @@
 ---
 name: Inset Plots
-permalink: plotly_js/insets
+permalink: javascript-graphing-library/insets
 description: How to make an inset graph in {language}.
 layout: base
 thumbnail: /images/insets.png
