--- a/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
+++ b/_posts/r/getting-started/2015-05-25-getting-started_r_index.html
@@ -1,5 +1,5 @@
 ---
-title: Getting Started Plotly for R
+name: Getting Started Plotly for R
 permalink: r/getting-started
 description: Plotly's R graphing library makes interactive, publication-quality graphs online. Examples of how to make line plots, scatter plots, area charts, bar charts, error bars, box plots, histograms, heatmaps, subplots, multiple-axes, polar charts and bubble charts.
 layout: getstart
@@ -71,7 +71,7 @@ Loading required package: ggplot2</pre>
 
             <p>Don't know your API key? If you don't have an account, you will be prompted to sign up.
                     <div >
-                        <a href="plot.ly/plot">Display Key</a>
+                        <a href="plot.ly/plot" class="button no_underline">Display Key</a>
                     </div>
              </p>
 
@@ -80,7 +80,7 @@ Loading required package: ggplot2</pre>
 			<p>Make sure to replace "your-company.com" with the URL of your Plotly On-Premise server.<bold>Questions? Email support@plot.ly</bold></p>
 
 			<p>In your Terminal, enter:<p>
-			<pre><code>
+			<pre><code class="terminal">
 			$python -c "import plotly; plotly.tools.set_config_file(plotly_domain='https://plotly.your-company.com',
 			plotly_streaming_domain='stream-plotly.your-company.com', plotly_api_domain='https://api-plotly.your-company.com')"
 			</code></pre>
